--- a/login_tcc/pubspec.yaml
+++ b/login_tcc/pubspec.yaml
@@ -30,8 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
-  flutter_spinkit: ^5.0.0
+
+  latlong2: ^0.9.0
+  flutter_map: ^6.1.0
+
+  flutter_osm_plugin: ^0.70.4
+
+  # Animação das bolinhas na Splash Screen  
+  flutter_spinkit: ^5.2.0 #era 5.0.0 antes
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
