--- a/login_tcc/pubspec.yaml
+++ b/login_tcc/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   easy_splash_screen: ^1.0.4
   shared_preferences: ^2.2.2
+  mask_text_input_formatter: ^2.9.0
+  google_fonts: ^6.1.0
+  mailer: ^6.1.0
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
