--- a/login_tcc/pubspec.yaml
+++ b/login_tcc/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   google_fonts: ^6.1.0
   mailer: ^6.1.0
   email_validator: ^2.1.17
+  fl_chart: ^0.66.2
+  syncfusion_flutter_charts: ^24.2.9
 
 dev_dependencies:
   flutter_test:
