--- a/login_tcc/pubspec.yaml
+++ b/login_tcc/pubspec.yaml
@@ -32,11 +32,11 @@ dependencies:
     sdk: flutter
 
   latlong2: ^0.9.0
-  flutter_map: ^6.1.0
+  flutter_map: ^8.1.1
 
-  flutter_osm_plugin: ^0.70.4
+  flutter_osm_plugin: ^1.3.8
 
-  flutter_map_cancellable_tile_provider: ^2.0.0
+  flutter_map_cancellable_tile_provider: ^3.1.0
 
   # Animação das bolinhas na Splash Screen  
   flutter_spinkit: ^5.2.0 #era 5.0.0 antes
@@ -48,10 +48,10 @@ dependencies:
   mask_text_input_formatter: ^2.9.0
   google_fonts: ^6.1.0
   mailer: ^6.1.0
-  email_validator: ^2.1.17
-  syncfusion_flutter_charts: ^24.2.9
+  email_validator: ^3.0.0
+  syncfusion_flutter_charts: ^29.2.4
   http: ^1.2.1
-  image_cropper: ^7.0.5
+  image_cropper: ^9.1.0
 
 dev_dependencies:
   flutter_test:
@@ -62,10 +62,15 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+  android: true
+  image_path: "./images/appIcon.png"
 
 # The following section is specific to Flutter packages.
 flutter:
