--- a/login_tcc/pubspec.yaml
+++ b/login_tcc/pubspec.yaml
@@ -70,7 +70,7 @@ dev_dependencies:
 
 flutter_icons:
   android: true
-  image_path: "./images/appIcon.png"
+  image_path: "./images/logo_tcc.png"
 
 # The following section is specific to Flutter packages.
 flutter:
